# lol-esports-data

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_motherduck.py  test_sql.py
dags/: ingestion_dag.py  oracle_elixir_dag.py
docs/: gold_validation_plan.md  prematch_training.md
scripts/: analyze_chovy.py  build_gold_lake.py  build_silver_lake.py  calculate_winrate.py  check_columns.py  check_data_coverage.py  check_leagues.py  check_msi.py  check_msi2.py  check_new_champs.py  check_regional.py  check_tournament_phases.py  check_worlds.py  chovy_vs_faker.py  debug_finals.py  debug_msi.py  debug_worlds_2016.py  download_all_matches.py  download_leaguepedia.py  download_leaguepedia_match_schedule.py  download_oracle.py  explain_champions.py  faker_titles.py  fix_db.py  full_ingestion.py  infer_tournament_phase.py  lck_last_week.py  list_champions.py  list_leagues.py  manage_betting_ledger.py  query_bronze.py  query_game.py  query_series.py  refresh_web_fast_lane.py  run_ingestion.py  run_silver_transform.py  score_bet365_value.py  score_fair_odds.py  score_game_totals_fair_lines.py  test_api.py  (+6 more)
spark/: spark-defaults.conf
src/: config.py  official_schedule.py  upcoming_matches.py
tests/: conftest.py  test_betting_ledger.py  test_bookmaker_value.py  test_champion_assets.py  test_config.py  test_fair_odds.py  test_game_analytics_web.py  test_game_totals_baseline.py  test_game_totals_fair_lines.py  test_ingestion.py  test_models.py  test_official_schedule.py  test_placeholder.py  test_player_analytics_web.py  (+6 more)
(+45 files in other folders)
